# template-docker

./: env.example  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08b0a9cebad6_add_todo_table.py
docker/: ci.sh  compose-ci.yaml  compose-deploy.yaml  compose-dev.yaml  deploy.sh  dev.sh
src/: app.py  dao.py  main.py  models.py  pool_config.py  seed.py  settings.py
src/routes/: home_bp.py
src/templates/: index.html
test/: test_sum.py
