[project]
name = "models-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "quart>=0.20.0",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "ty>=0.0.57",
]
